# jflat

./: README.md  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  test.yml
