[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.13.0"]

[project]
authors = [
    { email = "merschformann@proton.me", name = "Marius Merschformann" }
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = []
description = "A humble library for flattening Python dictionaries according to their JSON-path"
dynamic = [
    "version",
]
keywords = [
    "json",
    "json-path",
    "flatten",
    "dict",
    "dictionary",
    "nested",
]
license = { file = "LICENSE" }
maintainers = [
    { email = "merschformann@proton.me", name = "Marius Merschformann" }
]
name = "jpathflat"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/merschformann/jpathflat"
Repository = "https://github.com/merschformann/jpathflat"

[tool.hatch.version]
path = "jpathflat/__about__.py"
